move scripts to top

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
     <!-- Script links -->
     <script src="scripts/constants/clothingType.js"></script>
     <script src="scripts/constants/taskConstants.js"></script>
-    <script src="scripts/constants/colors.js"></script>
     <script src="scripts/objects/Clothing.js"></script>
     <script src="scripts/objects/Task.js"></script>
     <script src="scripts/objects/PhysicalTask.js"></script>
@@ -42,6 +41,8 @@
     <script src="scripts/currency.js"></script>
     <script src="scripts/breakTokens.js"></script>
     <script src="scripts/clothes.js"></script>
+    <script src="scripts/dressing.js"></script>
+    <script src="scripts/pulls.js"></script>
 
     <title>Avatar</title>
   </head>
@@ -192,20 +193,5 @@
     <img id="pants" />
     <img id="shoes" />
     <img id="pet" />
-
-    <!-- Script links -->
-    <script src="scripts/constants/clothingType.js"></script>
-    <script src="scripts/constants/taskConstants.js"></script>
-    <script src="scripts/constants/colors.js"></script>
-    <script src="scripts/objects/Clothing.js"></script>
-    <script src="scripts/objects/Task.js"></script>
-    <script src="scripts/objects/PhysicalTask.js"></script>
-    <script src="scripts/objects/MentalTask.js"></script>
-    <script src="scripts/journal.js"></script>
-    <script src="scripts/dailies.js"></script>
-    <script src="scripts/index.js"></script>
-    <script src="scripts/currency.js"></script>
-    <script src="scripts/clothes.js"></script>
-    <script src="scripts/dressing.js"></script>
   </body>
 </html>
