--- a/index.html
+++ b/index.html
@@ -165,28 +165,7 @@
           <div id="shoeBtn" class="dressBtn">Shoes</div>
           <div id="petBtn" class="dressBtn">Pet</div>
         </div>
-        <div id="items">
-          <img
-            src="images/wardrobe/bald small.png"
-            style="
-              width: 20%;
-              border: solid 1px #5a3dbd;
-              margin: 5px;
-              border-radius: 5px;
-            "
-          />
-          <img
-            src="images/wardrobe/hair small.png"
-            style="
-              width: 20%;
-              border: solid 1px #5a3dbd;
-              margin: 5px;
-              filter: grayscale(100%);
-              opacity: 0.3;
-              border-radius: 5px;
-            "
-          />
-        </div>
+        <div id="items"></div>
       </div>
     </dialog>
 
