--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <script src="scripts/breakTokens.js"></script>
     <script src="scripts/clothes.js"></script>
     <script src="scripts/wardrobe.js"></script>
+    <script src="scripts/dressing.js"></script>
     <script src="scripts/pulls.js"></script>
 
     <title>Avatar</title>
