add effects on moodicons

--- a/index.html
+++ b/index.html
@@ -137,13 +137,13 @@
       </div>
       <div id="moodDiv">
         <button id="happyButton" class="moodButton moodSelected">
-          <span class="material-symbols-outlined">sentiment_satisfied</span>
+          <span class="material-symbols-outlined" id="happyIcon">sentiment_satisfied</span>
         </button>
         <button id="neutralButton" class="moodButton">
-          <span class="material-symbols-outlined">sentiment_neutral</span>
+          <span class="material-symbols-outlined" id="neutralIcon">sentiment_neutral</span>
         </button>
         <button id="sadButton" class="moodButton">
-          <span class="material-symbols-outlined">sentiment_dissatisfied</span>
+          <span class="material-symbols-outlined" id="sadIcon">sentiment_dissatisfied</span>
         </button>
       </div>
       <div id="journalScreenContent">
