change img id names

--- a/index.html
+++ b/index.html
@@ -79,14 +79,15 @@
       <div id="shoes" class="dressing"></div>
 
       <div id="bottom" class="dressing">
-        <img src="images/pants/shorts.png" id="shortsImg" alt="shorts" />
+        <img src="images/pants/shorts.png" id="pants" alt="shorts" />
       </div>
 
       <div id="top" class="dressing">
-        <img src="images/shirts/Tshirt.png" id="TshirtImg" alt="Tshirt" />
+        <img src="images/shirts/Tshirt.png" id="shirt" alt="Tshirt" />
       </div>
     </div>
     <div id="pet">
+      <img id="dog"></img>
     </div>
 
     <!-- bottom navbar -->
@@ -168,12 +169,5 @@
         <div id="items"></div>
       </div>
     </dialog>
-
-    <!-- image section for clothing, requires manually adjustments in css (remove any thats too much) -->
-    <img id="hair" />
-    <img id="shirts" />
-    <img id="pants" />
-    <img id="shoes" />
-    <img id="pet" />
   </body>
 </html>
