add hair and shoes

--- a/index.html
+++ b/index.html
@@ -75,11 +75,15 @@
       <div id="character" class="dressing">
         <img src="images/character.png" id="characterImg" alt="character" />
       </div>
-
-      <div id="shoes" class="dressing"></div>
+      <div id="character" class="dressing">
+        <img src="images/hair/hair.png" id="hair" alt="hair" />
+      </div>
+      <div id="shoes" class="dressing">
+        <img src="images/shoes/shoes.png" id="shoes" alt="shoes" />
+      </div>
 
       <div id="bottom" class="dressing">
-        <img src="images/pants/shorts.png" id="pants" alt="shorts" />
+        <img src="images/pants/shorts.png" id="pants" alt="pants" />
       </div>
 
       <div id="top" class="dressing">
