--- a/index.html
+++ b/index.html
@@ -76,12 +76,11 @@
         <img src="images/character.png" id="characterImg" alt="character" />
       </div>
       <div id="character" class="dressing">
-        <img src="images/hair/hair.png" id="hair" alt="hair" />
+        <img id="hair" />
       </div>
-      <div id="shoes" class="dressing">
-        <img src="images/shoes/shoes.png" id="shoes" alt="shoes" />
+      <div id="shoesDiv" class="dressing">
+        <img src="images/shoes/shoes.png" id="shoes" />
       </div>
-
       <div id="bottom" class="dressing">
         <img src="images/pants/shorts.png" id="pants" alt="pants" />
       </div>
