remove shoe src

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <img id="hair" />
       </div>
       <div id="shoesDiv" class="dressing">
-        <img src="images/shoes/shoes.png" id="shoes" />
+        <img src="" id="shoes" />
       </div>
       <div id="bottom" class="dressing">
         <img src="images/pants/shorts.png" id="pants" alt="pants" />
