--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
         <label for="physicalDaily" id="physicalDailyPrompt"></label>
         <button id="completePhysicalButton" class="completeBtn">Finished!</button
         ><br />
+        <hr style="border-style: dotted; color: rgb(160, 160, 160); width: 2px;">
         <input type="checkbox" id="mentalDaily" name="mentalDaily" disabled />
         <label for="mentalDaily" id="mentalDailyPrompt"></label>
         <button id="openJournalButton" class="completeBtn">Open Journal</button
