--- a/index.html
+++ b/index.html
@@ -122,10 +122,13 @@
         <button id="skipDailyButton">skip Dailies</button>
       </div>
       <div id="tasksDiv">
-        <input type="checkbox" id="physicalDaily" name="physicalDaily" disabled />
-        <label for="physicalDaily" id="physicalDailyPrompt"></label>
+        <div class="eachTask">
+          <input type="checkbox" id="physicalDaily" name="physicalDaily" disabled />
+          <label for="physicalDaily" id="physicalDailyPrompt"></label>
+        </div>
         <button id="completePhysicalButton" class="completeBtn">Finished!</button
         ><br />
+        
         <hr style="border-style: dotted; color: rgb(160, 160, 160); width: 2px;">
         <input type="checkbox" id="mentalDaily" name="mentalDaily" disabled />
         <label for="mentalDaily" id="mentalDailyPrompt"></label>
